// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailEstimation /> should not render a div when estimation is null and showNullEstimation is false 1`] = `""`;

exports[`<ProposalDetailEstimation /> should render a div when estimation is not null 1`] = `
<Tag
  icon="cap cap-coins-2-1 icon--blue"
>
  <FormattedNumber
    currency="EUR"
    minimumFractionDigits={0}
    style="currency"
    value={100}
  />
</Tag>
`;

exports[`<ProposalDetailEstimation /> should render a div when estimation is null and showNullEstimation is true 1`] = `
<Tag
  icon="cap cap-coins-2-1 icon--blue"
>
  <FormattedNumber
    currency="EUR"
    minimumFractionDigits={0}
    style="currency"
    value={0}
  />
</Tag>
`;
